@@ -4,5 +4,17 @@ ThisBuild / scalaVersion := "2.12.18"
 
 lazy val root = (project in file("."))
   .settings(
-    name := "AnalysePollution"
+    name := "AnalysePollution",
+
+    // Dépendances Apache Spark - VERSION 3.5.1 (compatible Java 17)
+    libraryDependencies ++= Seq(
+      "org.apache.spark" %% "spark-core" % "3.5.1",
+      "org.apache.spark" %% "spark-sql" % "3.5.1"
+    ),
+
+    // Options Java pour résoudre les problèmes d'accès avec Java 17
+    javaOptions ++= Seq(
+      "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED"
+    )
   )
+
